clean up more 'inspections'